# homeAssistant-asistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
.cursor/rules/: agents-architecture.mdc  product.mdc  project.mdc
docs/architecture/decisions/: 002-llm-only-routing.md  003-hybrid-orchestrator-finalization.md
docs/prompts/: calendar-agent.md  finance-agent.md  prompt-improver-agent.md  qa-agent.md  qa-reviewer-agent.md  reminder-agent.md  router-agent.md  router-finalizer-agent.md  shopping-agent.md  subscription-agent.md  supervisor-agent.md  vehicle-agent.md
src/: __init__.py
src/app/: __init__.py  main.py
src/app/agents/: __init__.py  base.py  calendar.py  finance.py  qa.py  reminder.py  router.py  shopping.py  subscription.py  supervisor.py  vehicle.py
src/app/config/: database.py  settings.py
src/app/crons/: __init__.py  generate_rolling_summaries.py  run_qa_review.py
src/app/middleware/: correlation.py
src/app/repositories/: __init__.py  memory.py
src/app/routers/: internal.py
src/app/services/: __init__.py  backend_client.py  conversation.py  github.py  input_guard.py  interaction_log.py  llm_breaker.py  llm_security.py  message_guards.py  output_guard.py  phone_resolver.py  prompt_loader.py  qa_reviewer.py  quality_logger.py  (+2 more)
tests/: __init__.py  conftest.py  test_finance_multitool.py  test_health.py  test_quick_actions.py  test_router_finalization.py  test_webhook_access_gating.py
tests/evals/: README.md
tests/unit/: test_llm_breaker.py  test_message_guards.py  test_webhook_hmac.py
(+11 files in other folders)
